--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.top-card {
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 0 12px rgba(1, 41, 112, 0.1);
+    padding: 20px;
+    transition: transform .5s;
+}
